@@ -32,7 +32,7 @@ public class ExternalOAuthLogoutSuccessHandler extends SimpleUrlLogoutSuccessHan
     private final Set<String> defaultOrigin = Set.of(OriginKeys.UAA, OriginKeys.LDAP);
 
     public ExternalOAuthLogoutSuccessHandler(final IdentityProviderProvisioning providerProvisioning, final OidcMetadataFetcher oidcMetadataFetcher,
-                                             IdentityZoneManager identityZoneManager) {
+            IdentityZoneManager identityZoneManager) {
         this.providerProvisioning = providerProvisioning;
         this.oidcMetadataFetcher = oidcMetadataFetcher;
         this.identityZoneManager = identityZoneManager;
@@ -47,7 +47,7 @@ public class ExternalOAuthLogoutSuccessHandler extends SimpleUrlLogoutSuccessHan
         if (logoutUrl == null) {
             final String defaultUrl = getZoneDefaultUrl();
             if (LOGGER.isWarnEnabled()) {
-                LOGGER.warn(String.format("OAuth logout null, use default: %s", defaultUrl));
+                LOGGER.warn("OAuth logout null, use default: %s".formatted(defaultUrl));
             }
             return defaultUrl;
         }
@@ -56,8 +56,8 @@ public class ExternalOAuthLogoutSuccessHandler extends SimpleUrlLogoutSuccessHan
     }
 
     public String constructOAuthProviderLogoutUrl(final HttpServletRequest request, final String logoutUrl,
-                                                  final AbstractExternalOAuthIdentityProviderDefinition<OIDCIdentityProviderDefinition> oauthConfig,
-                                                  final Authentication authentication) {
+            final AbstractExternalOAuthIdentityProviderDefinition<OIDCIdentityProviderDefinition> oauthConfig,
+            final Authentication authentication) {
         final StringBuilder oauthLogoutUriBuilder = new StringBuilder(request.getRequestURL());
         if (StringUtils.hasText(request.getQueryString())) {
             oauthLogoutUriBuilder.append("?");
