@@ -13,7 +13,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.net.URL;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.cloudfoundry.identity.uaa.test.ModelTestUtils.getResourceAsString;
 import static org.hamcrest.Matchers.containsString;
@@ -137,7 +136,7 @@ class JdbcClientMetadataProvisioningTest {
                 .retrieveAll(identityZoneId)
                 .stream()
                 .map(ClientMetadata::getClientId)
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(clientIds, hasItem(clientId1));
         assertThat(clientIds, hasItem(clientId2));
@@ -198,7 +197,7 @@ class JdbcClientMetadataProvisioningTest {
             final String clientId,
             final String identityZoneId
     ) {
-        return String.format("insert into oauth_client_details(client_id, identity_zone_id) values ('%s', '%s')",
+        return "insert into oauth_client_details(client_id, identity_zone_id) values ('%s', '%s')".formatted(
                 clientId,
                 identityZoneId);
     }
@@ -208,7 +207,7 @@ class JdbcClientMetadataProvisioningTest {
             final String identityZoneId,
             final String createdBy
     ) {
-        return String.format("insert into oauth_client_details(client_id, identity_zone_id, created_by) values ('%s', '%s', '%s')",
+        return "insert into oauth_client_details(client_id, identity_zone_id, created_by) values ('%s', '%s', '%s')".formatted(
                 clientId,
                 identityZoneId,
                 createdBy);
@@ -220,7 +219,7 @@ class JdbcClientMetadataProvisioningTest {
             final String createdBy,
             final String appLaunchUrl
     ) {
-        return String.format("insert into oauth_client_details(client_id, identity_zone_id, created_by, app_launch_url) values ('%s', '%s', '%s', '%s')",
+        return "insert into oauth_client_details(client_id, identity_zone_id, created_by, app_launch_url) values ('%s', '%s', '%s', '%s')".formatted(
                 clientId,
                 identityZoneId,
                 createdBy,
